feat(backoffice-promotions): manage coupons
